[package]
name = "rivescript"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Implementation of a RiveScript chatbot interpreter for Rust."
homepage = "https://www.rivescript.com"
repository = "https://github.com/aichaos/rivescript-rs"
keywords = ["chatbot", "rivescript"]
categories = ["parser-implementations"]
exclude = [
    "eg/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rivescript"
path = "src/lib.rs"

[[bin]]
name = "rivescript"
path = "src/main.rs"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"