[package]
name = "rivescript-js"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A JavaScript engine for RiveScript object macros."
repository = "https://github.com/aichaos/rivescript-rs"

[lib]
name = "rivescript_js"
path = "src/lib.rs"

[dependencies]
rivescript-core = { version = "0.3.0", path = "../rivescript-core" }