[package]
name = "rivescript-js"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A JavaScript engine for RiveScript object macros."
repository = "https://github.com/aichaos/rivescript-rs"

[lib]
name = "rivescript_js"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
boa_engine = "0.21.1"
boa_gc = "0.21.1"
rivescript-core = { version = "0.3.0", path = "../rivescript-core" }
tokio = "1.52.1"
