[package]
name = "rivescript-redis"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A Redis driver for RiveScript user variable session management."
homepage = "https://www.rivescript.com"
repository = "https://github.com/aichaos/rivescript-rs"

[dependencies]
async-trait = "0.1.89"
redis = { version = "1.2.0", features = ["tokio-comp", "json"] }
rivescript-core = { version = "0.3.0", path = "../rivescript-core" }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
rivescript = { version = "0.3.0", path = "../rivescript" }
structopt = "0.3.26"
